--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,16 @@
 body {
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
+  background-color: rgb(0, 0, 0, 0.91);
+}
+
+#root{
+  max-width: 1500px;
+}
+
+.navbar-brand {
+  background: #e2b616;
+  border-radius: 5px;
+  padding: 4px;
+  font-weight: bold;
 }
