--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,9 @@ body {
   border-radius: 5px;
   padding: 4px;
   font-weight: bold;
+  transition: all 300ms ease-in-out;
+}
+
+.navbar-brand:hover{
+  background: #fec701;
 }
