--- a/src/Styles/Card.module.css
+++ b/src/Styles/Card.module.css
@@ -4,9 +4,8 @@
   background: rgba(0, 0, 0, 0.356);
   text-shadow: 2px 2px 2px black;
   display: flex;
-  justify-content: space-between;
-  align-items: first baseline;
-  flex-direction: column;
+  align-items: end;
+
 }
 
 .index {
@@ -23,4 +22,15 @@
 
 .cardStyled:hover {
   transform: scale(1.1);
+}
+
+@media only screen and (max-width: 640px) {
+  .cardBtn {
+    font-size: 10px;
+    padding: 0;
+  }
+
+  .width{
+    width: 27%;
+  }
 }
