--- a/src/Styles/Card.module.css
+++ b/src/Styles/Card.module.css
@@ -27,10 +27,10 @@
 @media only screen and (max-width: 640px) {
   .cardBtn {
     font-size: 10px;
-    padding: 0;
+    padding: 3px;
   }
 
   .width{
-    width: 27%;
+    width: 30%;
   }
 }
